--- a/docker-compose-cassandra.yml
+++ b/docker-compose-cassandra.yml
@@ -5,5 +5,6 @@ services:
     container_name: jb-blog-cassandra-db
     volumes:
       - /docker/volumes/jb-blog-db/var/lib/cassandra:/var/lib/cassandra
+      - /docker/volumes/jb-blog-db/cassandra.yaml:/etc/cassandra/cassandra.yaml
     ports:
       - 9042:9042
