--- a/backend/fsharp/fsharp-backend.fsproj
+++ b/backend/fsharp/fsharp-backend.fsproj
@@ -10,12 +10,17 @@
     <Compile Include="Models/User.fs" />
     <Compile Include="Models/Post.fs" />
 
+    <Compile Include="Utils/Security/GetStringMD5.fs"/>
+
     <Compile Include="DB/getCassandraSession.fs" />
+    <Compile Include="DB/RowToObj/UserRowToObj.fs" />
 
     <Compile Include="UseCases/UseCaseResult.fs"/>
-    <Compile Include="UseCases/Post/CreatePost.fs"/>
     <Compile Include="UseCases/User/GetUser.fs"/>
     <Compile Include="UseCases/User/CreateUser.fs"/>
+    <Compile Include="UseCases/User/Login.fs"/>
+
+    <Compile Include="UseCases/Post/CreatePost.fs"/>
 
     <Compile Include="Controllers/WeatherForecastController.fs" />
     <Compile Include="Controllers/UserController.fs" />
