creating user login in elixir docker services in one docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       - /docker/volumes/jb-blog-db/cassandra.yaml:/etc/cassandra/cassandra.yaml
     ports:
       - 9042:9042
+  redis: 
+    image: redis:6
+    ports:
+      - 6379:6379
+    container_name: jb-blog-redis
